Fixed some design errors

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-  <link rel="stylesheet" href="css/mystyle.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="css/mystyle.min.css">
  </head>
- <body class="green lighten-3">
+ <body class="green lighten-4">
    <div id="pageOne">
      <div id="mainContainer">
        <noscript><h2>This website uses JavaScript for visual effects. Please enable JavaScript or load this page in another browser with JavaScript enabled.</h2></noscript>
@@ -18,7 +17,7 @@
       <p id="thanksTitle">Thanks for visiting! Want to know more about me? Click the links below, or scroll down to read my bio.</p>
       <div id="buttonDiv">
         <span>
-        <span id="twitterButton" class="fa-stack fa-4x">
+        <span id="twtterButton" class="fa-stack fa-4x">
           <a href="https://twitter.com/RugsTweets" target="_blank">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -30,7 +29,7 @@
             <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
           </a>
         </span>
-        <span id="linkedinButton" class="fa-stack fa-4x">
+        <span id="lnkdnButton" class="fa-stack fa-4x">
           <a href="https://www.linkedin.com/in/brandonrninefive" target="_blank">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -44,7 +43,7 @@
         </span>
       </span>
       </div>
-      <p>You can also email me at <a href="mailto:brandonrninefive@gmail.com">brandonrninefive@gmail.com</a></p>
+      <p id="emailP">You can also contact me at <a href="mailto:brandonrninefive@gmail.com">brandonrninefive@gmail.com</a>.</p>
     </div>
   </div>
   <div id="pageTwo">
@@ -55,16 +54,17 @@
       <div id="bioCard" class="card-panel teal lighten-1">
         <span id="bioCardTitle">About Me</span>
         <p id="bioText" class="white-text">
-          Hello! My name is Brandon Ruggles, and I'm a senior computer science major at NJIT. When I was younger, I was always amazed by computers and the fact that they could generate entire worlds in the blink of an eye. Over time, that amazement grew into curiousity, and I decided to delve into the world of programming. During my freshman year of high school, I took my first programming class (a simple Visual Basic and C# course), and I ended up liking it so much that I decided programming was what I wanted to do for the rest of my life. Today, I've worked on multiple programming projects on my own, as well as with others, in a variety of languages and on a variety of different platforms. Being curious by nature, I've involved myself in various aspects of programming including app development, web development, scripting on Linux/Unix, and game development. As of late, I've taken an increased interest in lower-level graphics programming and artificial intelligence. My dream is to one day use my programming abilities to change the world for the better, whether it be through a creation of my own, or through my contribution to a project created at a software company. If you wish to learn more about me or my accomplishments, please click the link to my resume above (the rightmost button shaped like a PDF file).
+          Hello! My name is Brandon Ruggles, and I'm a senior computer science major at NJIT. When I was younger, I was always amazed by computers and the fact that they could generate entire worlds in the blink of an eye. Over time, that amazement grew into curiousity, and I decided to delve into the world of programming. During my freshman year of high school, I took my first programming class (a simple Visual Basic and C# course), and I ended up liking it so much that I decided programming was what I wanted to do for the rest of my life. Today, I've worked on multiple programming projects on my own, as well as with others, in a variety of languages and on a variety of different platforms. Being curious by nature, I've involved myself in various aspects of programming including app development, web development, scripting on Linux/Unix, and game development. As of late, I've taken an increased interest in lower-level graphics programming and artificial intelligence. My dream is to one day use my programming abilities to change the world for the better, whether it be through a creation of my own, or through my contribution to a project created at a software company. If you wish to learn more about me or my accomplishments, please view my resume or my Github account by using the links above (the rightmost button shaped like a PDF file is the link to my resume).
         </p>
       </div>
     </div>
   </div>
-  <footer class="page-footer brown">
+  <footer class="page-footer teal lighten-1">
     <div id="copyright" class="footer-copyright">
     © 2016 - 2017 Brandon Ruggles
     </div>
   </footer>
-  <script src="js/mainScript.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="js/mainScript.min.js"></script>
   </body>
 </html>
