--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
   <title>Brandon T. Ruggles</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-  <link rel="stylesheet" href="css/mystyle.min.css">
  </head>
  <body class="green lighten-4">
    <div id="pageOne">
@@ -17,25 +14,25 @@
       <p id="thanksTitle">Thanks for visiting! Want to know more about me? Click the links below, or scroll down to read my bio.</p>
       <div id="buttonDiv">
         <span>
-        <span id="twtterButton" class="fa-stack fa-4x">
+        <span id="twtterButton" class="fa-stack">
           <a href="https://twitter.com/RugsTweets" target="_blank">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
           </a>
         </span>
-        <span id="githubButton" class="fa-stack fa-4x">
+        <span id="githubButton" class="fa-stack">
           <a href="https://github.com/brandonrninefive" target="_blank">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
           </a>
         </span>
-        <span id="lnkdnButton" class="fa-stack fa-4x">
+        <span id="lnkdnButton" class="fa-stack">
           <a href="https://www.linkedin.com/in/brandonrninefive" target="_blank">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
           </a>
         </span>
-        <span id="resumeButton" class="fa-stack fa-4x">
+        <span id="resumeButton" class="fa-stack">
           <a href="https://www.dropbox.com/s/716sb4pbe3taxzd/Resume.pdf?dl=0" target="_blank">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-file-pdf-o fa-stack-1x fa-inverse"></i>
@@ -64,6 +61,9 @@
     © 2016 - 2017 Brandon Ruggles
     </div>
   </footer>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+  <link rel="stylesheet" href="css/mystyle.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="js/mainScript.min.js"></script>
   </body>
