--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </footer>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-  <link rel="stylesheet" href="css/mystyle.min.css">
+  <link rel="stylesheet" href="css/mystyle.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="js/mainScript.min.js"></script>
   </body>
