--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     © 2016 - 2017 Brandon Ruggles
     </div>
   </footer>
+  <link rel="stylesheet" href="css/mystyle.min.css">
   <script src="js/defer.min.js"></script>
   </body>
 </html>
