Attempting to fix slow CSS loading.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
  </head>
- <body class="green lighten-4">
+ <body style="background-color:#c8e6c9">
    <div id="pageOne">
      <div id="mainContainer">
        <noscript><h2>This website uses JavaScript for visual effects. Please enable JavaScript or load this page in another browser with JavaScript enabled.</h2></noscript>
@@ -61,7 +61,6 @@
     © 2016 - 2017 Brandon Ruggles
     </div>
   </footer>
-  <link rel="stylesheet" href="css/mystyle.min.css">
   <script src="js/defer.min.js"></script>
   </body>
 </html>
