--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head>
   <title>Brandon T. Ruggles</title>
   <meta charset="utf-8">
+  <meta http-equiv="Cache-control" content="public">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
   body{display:flex;flex-direction:column;min-height:100vh;background-color:#c8e6c9}main{flex:1 0 auto}#mainContainer{padding-top:30vh}#alwaysTitle,#buttonDiv,#emailP,#mainContainer2,#nameTitle,#thanksTitle{display:none}#gButton,#lButton,#rButton,#tButton{opacity:0}
