--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </span>
       </span>
       </div>
-      <p id="emailP">You can also contact me at <a href="mailto:brandonrninefive@gmail.com">brandonrninefive@gmail.com</a>.</p>
+      <p id="emailP">I hope you have a fantastic day.</p>
     </div>
   </div>
   <div id="pageTwo">
@@ -54,7 +54,7 @@
       <div id="bioCard" class="card-panel teal lighten-1">
         <span id="bioCardTitle">About Me</span>
         <p id="bioText" class="white-text">
-          Hello! My name is Brandon Ruggles, and I'm a senior computer science major at NJIT. When I was younger, I was always amazed by computers and the fact that they could generate entire worlds in the blink of an eye. Over time, that amazement grew into curiousity, and I decided to delve into the world of programming. During my freshman year of high school, I took my first programming class (a simple Visual Basic and C# course), and I ended up liking it so much that I decided programming was what I wanted to do for the rest of my life. Today, I've worked on multiple programming projects on my own, as well as with others, in a variety of languages and on a variety of different platforms. Being curious by nature, I've involved myself in various aspects of programming including app development, web development, scripting on Linux/Unix, and game development. As of late, I've taken an increased interest in lower-level graphics programming and artificial intelligence. My dream is to one day use my programming abilities to change the world for the better, whether it be through a creation of my own, or through my contribution to a project created at a software company. If you wish to learn more about me or my accomplishments, please view my resume or my Github account by using the links above (the rightmost button shaped like a PDF file is the link to my resume).
+          Hello! My name is Brandon Ruggles, and I'm a senior computer science major at NJIT. When I was younger, I was always amazed by computers and the fact that they could generate entire worlds in the blink of an eye. Over time, that amazement grew into curiousity, and I decided to delve into the world of programming. During my freshman year of high school, I took my first programming class (a simple Visual Basic and C# course), and I ended up liking it so much that I decided programming was what I wanted to do for the rest of my life. Today, I've worked on multiple programming projects on my own, as well as with others, in a variety of languages and on a variety of different platforms. Being curious by nature, I've involved myself in various aspects of programming including app development, web development, scripting on Linux/Unix, and game development. As of late, I've taken an increased interest in lower-level graphics programming and artificial intelligence. My dream is to one day use my programming abilities to change the world for the better, whether it be through a creation of my own, or through my contribution to a project created at a software company. If you wish to learn more about me or my accomplishments, feel free to use the links above!
         </p>
       </div>
     </div>
