Updated the copyright notice.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
   </div>
   <footer class="page-footer teal lighten-1">
     <div id="copyright" class="footer-copyright">
-    © 2017 - 2018 Brandon Ruggles
+    © 2017 - 2018 
+	<br/>
+    Brandon T. Ruggles
     </div>
   </footer>
   <script>
