Updated the copyright notice.

--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
   </div>
   <footer class="page-footer teal lighten-1">
     <div id="copyright" class="footer-copyright">
-    © 2017 - 2018 
-	<br/>
-    Brandon T. Ruggles
+    © 2017 - 2018 Brandon T. Ruggles
     </div>
   </footer>
   <script>
