Fixed the responsiveness of the site at different resolutions.

--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <footer class="footer navbar-fixed-bottom">
-	<div class="container">
+  <footer>
+	<div class="footer-container">
 		This page was written using <a href="https://facebook.github.io/react/" target="_blank" rel="noopener noreferrer">React</a> and <a href="https://reactstrap.github.io/" target="_blank" rel="noopener noreferrer">Reactstrap</a>. View the source code <a href="https://github.com/brandonrninefive/brandonrninefive.github.io" target="_blank" rel="noopener noreferrer">here</a>.
-  	</div>
+   	</div>
    </footer>
 </html>
