Fixed some spacing for different screens.

--- a/index.test.html
+++ b/index.test.html
@@ -12,12 +12,12 @@
     <div class='navbar fixed'>
       <div class='container'>
         <h4 class='pull-left'>Brandon T. Ruggles</h4>
-        <ul class='pull-right'>
-          <li><a rel="noopener noreferrer" target="_blank" href='https://github.com/brandonrninefive'>Github</a></li>
-          <li><a rel="noopener noreferrer" target="_blank" href='https://linkedin.com/in/brandonrninefive'>LinkedIn</a></li>
-          <li><a rel="noopener noreferrer" target="_blank" href='https://twitter.com/rugstweets'>Twitter</a></li>
-          <li><a rel="noopener noreferrer" target="_blank" href='https://www.dropbox.com/s/716sb4pbe3taxzd/Resume.pdf?dl=0'>Resume</a></li>
-        </ul>
+        <span class='profiles-large pull-right'>
+          <a rel="noopener noreferrer" target="_blank" href='https://github.com/brandonrninefive'>Github</a>
+          <a rel="noopener noreferrer" target="_blank" href='https://linkedin.com/in/brandonrninefive'>LinkedIn</a>
+          <a rel="noopener noreferrer" target="_blank" href='https://twitter.com/rugstweets'>Twitter</a>
+          <a rel="noopener noreferrer" target="_blank" href='https://www.dropbox.com/s/716sb4pbe3taxzd/Resume.pdf?dl=0'>Resume</a>
+        </span>
       </div>
     </div>
     <div class='container'> 
@@ -28,6 +28,12 @@
         </div>
       </div>
       
+        <div class='profiles-small'>
+          <a rel="noopener noreferrer" target="_blank" href='https://github.com/brandonrninefive'>Github</a>
+          <a rel="noopener noreferrer" target="_blank" href='https://linkedin.com/in/brandonrninefive'>LinkedIn</a>
+          <a rel="noopener noreferrer" target="_blank" href='https://twitter.com/rugstweets'>Twitter</a>
+          <a rel="noopener noreferrer" target="_blank" href='https://www.dropbox.com/s/716sb4pbe3taxzd/Resume.pdf?dl=0'>Resume</a>
+        </div>
       <h4 class='explainer'>WELCOME</h4>
         <p>Thanks for stopping by! For more about me or my professional experience, please use the links above. To see a list of my open source contributions, or what I've been working on lately, feel free to scroll down and take a look.</p>
       
@@ -65,8 +71,8 @@
       <h4 class='explainer'>WHAT I'M WORKING ON</h4>
       <h5 class='explainer'>12/31/18</h5>
       <p>Lately, I've been trying to learn more about 3D game development, but I've also wanted add a new programming language to my resume. Fortunately, I've found the perfect mix of the two. Using <a rel="noopener noreferrer" target="_blank" href="https://github.com/g3n/engine">g3n</a>, an open source 3D game engine written in Go, I can learn new 3D game concepts, while also learning the fundamentals of Go. Not sure if I'll make anything substantial just yet, but right now I'm having fun with it!</p>
-      <div class='end'></div>
     </div>
+    <div class='end'></div>
   </body>
   <footer class='footer'>
     <p>This page uses the lightweight framework <a rel="noopener noreferrer" target="_blank" href="https://github.com/andhart/bijou">Bijou</a> for CSS, and an icon provided by <a rel="noopener noreferrer" target="_blank" href="https://icons8.com/">icons8</a>. You can view my source code <a rel="noopener noreferrer" target="_blank" href="https://github.com/brandonrninefive/brandonrninefive.github.io">here</a>.</p>
