Fixed some typos.

--- a/index.test.html
+++ b/index.test.html
@@ -70,7 +70,7 @@
       <div class='divider'></div>
       <h4 class='explainer'>WHAT I'M WORKING ON</h4>
       <h5 class='explainer'>12/31/18</h5>
-      <p>Lately, I've been trying to learn more about 3D game development, but I've also wanted add a new programming language to my resume. Fortunately, I've found the perfect mix of the two. Using <a rel="noopener noreferrer" target="_blank" href="https://github.com/g3n/engine">g3n</a>, an open source 3D game engine written in Go, I can learn new 3D game concepts, while also learning the fundamentals of Go. Not sure if I'll make anything substantial just yet, but right now I'm having fun with it!</p>
+      <p>Lately, I've been trying to learn more about 3D game development, but I've also wanted to add a new programming language to my resume. Fortunately, I've found the perfect mix of the two. Using <a rel="noopener noreferrer" target="_blank" href="https://github.com/g3n/engine">g3n</a>, an open source 3D game engine written in Go, I can learn new 3D game concepts, while also learning the fundamentals of Go. I'm not sure if I'll make anything substantial with it just yet, but right now I'm having fun with it!</p>
     </div>
     <div class='end'></div>
   </body>
