Removed blog from site and added automated minify script.

--- a/index.test.html
+++ b/index.test.html
@@ -35,8 +35,8 @@
           <a rel="noopener noreferrer" target="_blank" href='https://www.dropbox.com/s/716sb4pbe3taxzd/Resume.pdf?dl=0'>Resume</a>
         </div>
       <h4 class='explainer'>WELCOME</h4>
-        <p>Thanks for stopping by! For more about me or my professional experience, please use the links above. To see a list of my open source contributions, or what I've been working on lately, feel free to scroll down and take a look.</p>
-      
+        <p>Thanks for stopping by! I'm a software engineer from the NJ/NY area with a passion for software automation, low-level kernel development, and data analytics. With over three years of professional experience, my career may just be getting started, but I plan on one day changing the world with the lessons that I'm learning and skills that I'm gaining along my journey.</p>
+				<p>Of the things that I do well, unfortunately blogging is not one of them. If you want to find out more about me or my work experience, please feel free to scroll through and visit the links on this page. I look forward to hearing from you!</p>
       <div class='divider'></div>
       <h4 class='explainer'>OPEN SOURCE CONTRIBUTIONS</h4>
       
@@ -66,11 +66,6 @@
           </tr>
         </tbody>
       </table>
-
-      <div class='divider'></div>
-      <h4 class='explainer'>WHAT I'M WORKING ON</h4>
-      <h5 class='explainer'>12/31/18</h5>
-      <p>Lately, I've been trying to learn more about 3D game development, but I've also wanted to add a new programming language to my resume. Fortunately, I've found the perfect mix of the two. Using <a rel="noopener noreferrer" target="_blank" href="https://github.com/g3n/engine">g3n</a>, an open source 3D game engine written in Go, I can learn new 3D game concepts, while also learning the fundamentals of Go. I'm not sure if I'll make anything substantial with it just yet, but right now I'm having fun with it!</p>
     </div>
     <div class='end'></div>
   </body>
