Updated bio, open source contributions, and removed Twitter link.

--- a/index.test.html
+++ b/index.test.html
@@ -15,7 +15,6 @@
         <span class='profiles-large pull-right'>
           <a rel="noopener noreferrer" target="_blank" href='https://github.com/brandonrninefive'>Github</a>
           <a rel="noopener noreferrer" target="_blank" href='https://linkedin.com/in/brandonrninefive'>LinkedIn</a>
-          <a rel="noopener noreferrer" target="_blank" href='https://twitter.com/rugstweets'>Twitter</a>
           <a rel="noopener noreferrer" target="_blank" href='https://www.dropbox.com/s/716sb4pbe3taxzd/Resume.pdf?dl=0'>Resume</a>
         </span>
       </div>
@@ -23,7 +22,6 @@
     <div class='container'> 
       <div class='banner row'>
         <div class='span twelve'>
-          <h4>Software Engineer. Dreamer. Always Learning.</h4>
           <img class="portrait" src="img/portrait.jpg" alt="Portrait"/>
         </div>
       </div>
@@ -31,12 +29,25 @@
         <div class='profiles-small'>
           <a rel="noopener noreferrer" target="_blank" href='https://github.com/brandonrninefive'>Github</a>
           <a rel="noopener noreferrer" target="_blank" href='https://linkedin.com/in/brandonrninefive'>LinkedIn</a>
-          <a rel="noopener noreferrer" target="_blank" href='https://twitter.com/rugstweets'>Twitter</a>
           <a rel="noopener noreferrer" target="_blank" href='https://www.dropbox.com/s/716sb4pbe3taxzd/Resume.pdf?dl=0'>Resume</a>
         </div>
       <h4 class='explainer'>WELCOME</h4>
-        <p>Thanks for stopping by! I'm a software engineer from the NJ/NY area with a passion for software automation, low-level kernel development, and data analytics. With over three years of professional experience, my career may just be getting started, but I plan on one day changing the world with the lessons that I'm learning and skills that I'm gaining along my journey.</p>
-				<p>Of the things that I do well, unfortunately blogging is not one of them. If you want to find out more about me or my work experience, please feel free to scroll through and visit the links on this page. I look forward to hearing from you!</p>
+        <p>
+          Thanks for stopping by! I'm a software engineer from the NJ/NY area 
+          with a passion for software automation, web development, 
+          and big data analytics. Recently, I've been working as an Enterprise 
+          Systems Engineer on Facebook's Data Security Engineering team, 
+          helping to build tools for protecting sensitive company data.
+          With over five years of indsutry experience, I'm seeking 
+          impactful projects and opportunities that will result in 
+          positively changing the lives of as many people as possible.
+        </p>
+				<p>
+          Outside of software engineering work, I enjoy travel, studying 
+          business, learning new languages, and more! To learn more about 
+          me or my work experience, please feel free to scroll through and 
+          visit the links on this page. I look forward to hearing from you!
+        </p>
       <div class='divider'></div>
       <h4 class='explainer'>OPEN SOURCE CONTRIBUTIONS</h4>
       
@@ -44,25 +55,36 @@
         <thead>
           <tr>
             <th>Project Name</th>
-            <th>Pull Request #'s</th>
+            <th>Pull Request/Commit #'s</th>
           </tr>
         </thead>
         <tbody>
           <tr>
+            <td><a rel="noopener noreferrer" target="_blank" href="https://github.com/facebook/pyre-check">Facebook/pyre-check</a></td>
+            <td>
+              <a rel="noopener noreferrer" target="_blank" href="https://github.com/facebook/pyre-check/commit/4a91de7bf787cfd5b09b5b4f1e32168f6fc2f663">Commit #4a91de7</a>,
+              <a rel="noopener noreferrer" target="_blank" href="https://github.com/facebook/pyre-check/commit/e1928c8399536fe81e25f99f168dab131ea05f18">Commit #e1928c8</a>
+            </td>
+
+          </tr>
+          <tr>
             <td><a rel="noopener noreferrer" target="_blank" href="https://github.com/nodejs/node">nodejs/node</a></td>
-            <td><a rel="noopener noreferrer" target="_blank" href="https://github.com/nodejs/node/pull/20321">#20321</a></td>
+            <td><a rel="noopener noreferrer" target="_blank" href="https://github.com/nodejs/node/pull/20321">PR #20321</a></td>
           </tr>
           <tr>
             <td><a rel="noopener noreferrer" target="_blank" href="https://github.com/Microsoft/vscode">Microsoft/vscode</a></td>
-            <td><a rel="noopener noreferrer" target="_blank" href="https://github.com/Microsoft/vscode/pull/40405">#40405</a>, <a rel="noopener noreferrer" target="_blank" href="https://github.com/Microsoft/vscode/pull/29860">#29860</a></td> 
+            <td>
+              <a rel="noopener noreferrer" target="_blank" href="https://github.com/Microsoft/vscode/pull/40405">PR #40405</a>, 
+              <a rel="noopener noreferrer" target="_blank" href="https://github.com/Microsoft/vscode/pull/29860">PR #29860</a>
+            </td> 
           </tr>
           <tr>
             <td><a rel="noopener noreferrer" target="_blank" href="https://github.com/bitcoin/bitcoin">bitcoin/bitcoin<a/></td>
-            <td><a rel="noopener noreferrer" target="_blank" href="https://github.com/bitcoin/bitcoin/pull/13284">#13284</a></td>
+            <td><a rel="noopener noreferrer" target="_blank" href="https://github.com/bitcoin/bitcoin/pull/13284">PR #13284</a></td>
           </tr>
           <tr>
             <td><a rel="noopener noreferrer" target="_blank" href="https://github.com/ReactTraining/react-router">ReactTraining/react-router</a></td>
-            <td><a rel="noopener noreferrer" target="_blank" href="https://github.com/ReactTraining/react-router/pull/6118">#6118</a></td>
+            <td><a rel="noopener noreferrer" target="_blank" href="https://github.com/ReactTraining/react-router/pull/6118">PR #6118</a></td>
           </tr>
         </tbody>
       </table>
@@ -70,6 +92,11 @@
     <div class='end'></div>
   </body>
   <footer class='footer'>
-    <p>This page uses the lightweight framework <a rel="noopener noreferrer" target="_blank" href="https://github.com/andhart/bijou">Bijou</a> for CSS, and an icon provided by <a rel="noopener noreferrer" target="_blank" href="https://icons8.com/">icons8</a>. You can view my source code <a rel="noopener noreferrer" target="_blank" href="https://github.com/brandonrninefive/brandonrninefive.github.io">here</a>.</p>
+    <p>This page uses the lightweight framework <a rel="noopener noreferrer" target="_blank" href="https://github.com/andhart/bijou">Bijou</a> 
+      for CSS, and an icon provided by 
+      <a rel="noopener noreferrer" target="_blank" href="https://icons8.com/">icons8</a>. 
+      You can view my source code 
+      <a rel="noopener noreferrer" target="_blank" href="https://github.com/brandonrninefive/brandonrninefive.github.io">here</a>.
+    </p>
   </footer>
 </html>
